// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/StatusDropdown should match snapshot in default state 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu"
  onToggle={[Function]}
  open={false}
>
  <div
    className="status-wrapper status-selector"
  >
    <button
      aria-label="Set a status"
      className="status style--none"
    >
      <StatusIcon
        size="sm"
        status="offline"
      />
    </button>
    <span
      className="status status-edit edit"
    >
      <LocalizedIcon
        ariaLabel={
          Object {
            "defaultMessage": "Dropdown Icon",
            "id": "generic_icons.dropdown",
          }
        }
        className="fa fa-caret-down"
      />
    </span>
  </div>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
  >
    <MenuHeader>
      <MemoizedFormattedMessage
        defaultMessage="Status"
        id="status_dropdown.set_your_status"
      />
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="right"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile}"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(injectIntl(UserSettingsModal))",
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status and expiry 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu active"
  onToggle={[Function]}
  open={true}
>
  <div
    className="status-wrapper status-selector"
  >
    <button
      aria-label="Set a status"
      className="status style--none"
    >
      <StatusIcon
        size="sm"
        status="offline"
      />
    </button>
    <span
      className="status status-edit edit"
    >
      <LocalizedIcon
        ariaLabel={
          Object {
            "defaultMessage": "Dropdown Icon",
            "id": "generic_icons.dropdown",
          }
        }
        className="fa fa-caret-down"
      />
    </span>
  </div>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
  >
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <span
              className="d-flex"
            >
              <CustomStatusEmoji
                emojiSize={16}
                emojiStyle={
                  Object {
                    "marginLeft": 0,
                  }
                }
                showTooltip={false}
                spanStyle={Object {}}
                tooltipDirection="top"
                userID=""
              />
            </span>
          </span>
          <CustomStatusText
            className="custom_status__text"
            text="In a meeting"
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          />
        </span>
        <Memo(ExpiryTime)
          className="custom_status__expiry padded"
          time="2021-05-03T23:59:59.000Z"
          withinBrackets={true}
        />
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="right"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile}"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(injectIntl(UserSettingsModal))",
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status enabled 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu active"
  onToggle={[Function]}
  open={true}
>
  <div
    className="status-wrapper status-selector"
  >
    <button
      aria-label="Set a status"
      className="status style--none"
    >
      <StatusIcon
        size="sm"
        status="offline"
      />
    </button>
    <span
      className="status status-edit edit"
    >
      <LocalizedIcon
        ariaLabel={
          Object {
            "defaultMessage": "Dropdown Icon",
            "id": "generic_icons.dropdown",
          }
        }
        className="fa fa-caret-down"
      />
    </span>
  </div>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
  >
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <EmojiIcon
              className="custom-status-emoji"
            />
          </span>
          <CustomStatusText
            className="custom_status__text"
            text=""
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          >
            Set a Custom Status
          </Text>
        </span>
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="right"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile}"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(injectIntl(UserSettingsModal))",
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status expired 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu active"
  onToggle={[Function]}
  open={true}
>
  <div
    className="status-wrapper status-selector"
  >
    <button
      aria-label="Set a status"
      className="status style--none"
    >
      <StatusIcon
        size="sm"
        status="offline"
      />
    </button>
    <span
      className="status status-edit edit"
    >
      <LocalizedIcon
        ariaLabel={
          Object {
            "defaultMessage": "Dropdown Icon",
            "id": "generic_icons.dropdown",
          }
        }
        className="fa fa-caret-down"
      />
    </span>
  </div>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
  >
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <EmojiIcon
              className="custom-status-emoji"
            />
          </span>
          <CustomStatusText
            className="custom_status__text"
            text=""
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          >
            Set a Custom Status
          </Text>
        </span>
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="right"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile}"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(injectIntl(UserSettingsModal))",
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status pulsating dot enabled 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu active"
  onToggle={[Function]}
  open={true}
>
  <div
    className="status-wrapper status-selector"
  >
    <button
      aria-label="Set a status"
      className="status style--none"
    >
      <StatusIcon
        size="sm"
        status="offline"
      />
    </button>
    <span
      className="status status-edit edit"
    >
      <LocalizedIcon
        ariaLabel={
          Object {
            "defaultMessage": "Dropdown Icon",
            "id": "generic_icons.dropdown",
          }
        }
        className="fa fa-caret-down"
      />
    </span>
  </div>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
  >
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <EmojiIcon
              className="custom-status-emoji"
            />
          </span>
          <CustomStatusText
            className="custom_status__text"
            text=""
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          >
            Set a Custom Status
          </Text>
          <PulsatingDot />
        </span>
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="right"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile}"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(injectIntl(UserSettingsModal))",
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with profile picture URL 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu"
  onToggle={[Function]}
  open={false}
>
  <div
    className="status-wrapper status-selector"
  >
    <Memo(Avatar)
      size="lg"
      url="http://localhost:8065/api/v4/users/jsx5jmdiyjyuzp9rzwfaf5pwjo/image?_=1590519110944"
    />
    <button
      aria-label="Set a status"
      className="status style--none"
    >
      <StatusIcon
        size="sm"
        status="offline"
      />
    </button>
    <span
      className="status status-edit edit"
    >
      <LocalizedIcon
        ariaLabel={
          Object {
            "defaultMessage": "Dropdown Icon",
            "id": "generic_icons.dropdown",
          }
        }
        className="fa fa-caret-down"
      />
    </span>
  </div>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
  >
    <MenuHeader>
      <MemoizedFormattedMessage
        defaultMessage="Status"
        id="status_dropdown.set_your_status"
      />
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="right"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile}"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(injectIntl(UserSettingsModal))",
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with status dropdown open 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu active"
  onToggle={[Function]}
  open={true}
>
  <div
    className="status-wrapper status-selector"
  >
    <button
      aria-label="Set a status"
      className="status style--none"
    >
      <StatusIcon
        size="sm"
        status="offline"
      />
    </button>
    <span
      className="status status-edit edit"
    >
      <LocalizedIcon
        ariaLabel={
          Object {
            "defaultMessage": "Dropdown Icon",
            "id": "generic_icons.dropdown",
          }
        }
        className="fa fa-caret-down"
      />
    </span>
  </div>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
  >
    <MenuHeader>
      <MemoizedFormattedMessage
        defaultMessage="Status"
        id="status_dropdown.set_your_status"
      />
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="right"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile}"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "displayName": "Connect(injectIntl(UserSettingsModal))",
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;
